welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: '=' expected but '[' found.
	def murNord() [Boolean] {
                      ^SnakeBuggle:27: error: illegal start of simple expression
	def posFinale() {
^